Created React component library
And an example project

Co-authored-by: carlwiede <carlwie@student.chalmers.se>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
 	"compilerOptions": {
 		"alwaysStrict": true,
 		"esModuleInterop": true,
+		"jsx": "react",
 		"module": "CommonJS",
 		"moduleResolution": "node",
 		"outDir": "dist",
 		"target": "ES2017"
-	},
-	"include": ["src/**/*.ts"]
+	}
 }
