--- a/package.json
+++ b/package.json
@@ -2,13 +2,21 @@
 	"name": "boardgame",
 	"version": "0.0.1",
 	"scripts": {
-		"build": "tsc",
-		"bundle": "webpack-cli --mode=production"
+		"start": "webpack-cli serve --config=./example.config.js",
+		"build": "npm run build-lib && npm run build-components",
+		"build-lib": "webpack-cli --mode=production --config=./webpack.config.js",
+		"build-components": "webpack-cli --mode=production --config=./components.config.js"
 	},
 	"devDependencies": {
+		"@types/react": "^17.0.2",
+		"@types/react-dom": "^17.0.1",
+		"html-webpack-plugin": "^5.2.0",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
 		"ts-loader": "^8.0.17",
 		"typescript": "^4.2.2",
 		"webpack": "^5.24.2",
-		"webpack-cli": "^4.5.0"
+		"webpack-cli": "^4.5.0",
+		"webpack-dev-server": "^3.11.2"
 	}
 }
