--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-dom": "^17.0.1",
 		"ts-loader": "^8.0.17",
 		"typescript": "^4.2.2",
+		"vis-network": "^9.0.2",
 		"webpack": "^5.24.2",
 		"webpack-cli": "^4.5.0",
 		"webpack-dev-server": "^3.11.2"
