Each "project" gets its own config files

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
 	"version": "0.0.1",
 	"license": "MIT",
 	"scripts": {
-		"start": "webpack-cli serve --config=./example.config.js",
+		"start": "webpack-cli serve --config=example.config.js",
 		"build": "npm run build-lib && npm run build-components && npm run build-example",
-		"build-lib": "webpack-cli --mode=production --config=./webpack.config.js",
-		"build-components": "webpack-cli --mode=production --config=./components.config.js",
-		"build-example": "webpack-cli --mode=production --config=./example.config.js"
+		"build-lib": "webpack-cli --mode=production --config=lib.config.js",
+		"build-components": "webpack-cli --mode=production --config=components.config.js",
+		"build-example": "webpack-cli --mode=production --config=example.config.js",
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.2",
