--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,15 @@
 		"jsx": "react",
 		"moduleResolution": "node",
 		"target": "ES5"
+	},
+	"typedocOptions": {
+		"entryPoints": [
+			"./src/index.ts",
+			"./components/index.ts"
+		],
+		"excludePrivate": true,
+		"excludeExternals": true,
+		"out": "./docs/",
+		"readme": "none"
 	}
 }
