Nicer naming of the modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		],
 		"excludePrivate": true,
 		"excludeExternals": true,
+		"name": "@boardgame-dsl",
 		"out": "./docs/",
 		"readme": "none"
 	}
